Show command output on unknown failure

Summary:
If the error is unknown (all errors in encfs), show the 'details...' button
which shows the command line output to the user when activated.

BUG:412779

Reviewers: #plasma, davidedmundson, ngraham, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D28099